src/test/resources/30/single/xhtml/valid/http-equiv-2.xhtml
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
   <head>	
      <meta http-equiv="Default-Style" content="foo" />
	  <meta http-equiv="Refresh" content="300" />
      <meta http-equiv="Content-Type" content="Text/HTML; Charset=UTF-8" />
      <title>TOC</title>
   </head>
   <body>
      <nav epub:type="toc" id="toc">
         <ol>
            <li>
               <a href="navigation.xhtml#toc">TOC</a>
            </li>
         </ol>
      </nav>
   </body>
</html>
