src/test/resources/30/single/xhtml/invalid/title-empty.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
  <head>
    <title></title>
    <meta charset="UTF-8"/>
  </head>
  <body>
    <h1>Test</h1>
  </body>
</html>
